--- a/app/src/main/res/layout/fragment_title_screen.xml
+++ b/app/src/main/res/layout/fragment_title_screen.xml
@@ -3,6 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="titleScreenViewModel"
+            type="com.example.my_media_list.titlescreen.TitleScreenViewModel" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/start_button_text"
+            android:onClick="@{() -> titleScreenViewModel.onStartButtonClick()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
