--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/titleScreenFragment"
-        android:name="com.example.my_media_list.titlescreen.TitleScreenFragment"
+        android:name="com.example.mymedialist.titlescreen.TitleScreenFragment"
         android:label="fragment_title_screen"
         tools:layout="@layout/fragment_title_screen" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/mainListFragment"
-        android:name="com.example.my_media_list.mainlist.MainListFragment"
+        android:name="com.example.mymedialist.mainlist.MainListFragment"
         android:label="fragment_main_list"
         tools:layout="@layout/fragment_main_list" />
 </navigation>
