--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -5,6 +5,7 @@
     android:id="@+id/navigation"
     app:startDestination="@id/titleScreenFragment">
 
+
     <fragment
         android:id="@+id/titleScreenFragment"
         android:name="com.example.mymedialist.titlescreen.TitleScreenFragment"
@@ -18,5 +19,31 @@
         android:id="@+id/mainListFragment"
         android:name="com.example.mymedialist.mainlist.MainListFragment"
         android:label="fragment_main_list"
-        tools:layout="@layout/fragment_main_list" />
+        tools:layout="@layout/fragment_main_list" >
+        <action
+            android:id="@+id/action_mainListFragment_to_addMediaFragment"
+            app:destination="@id/addMediaFragment" />
+        <action
+            android:id="@+id/action_mainListFragment_to_movieDetailsFragment"
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addMediaFragment"
+        android:name="com.example.mymedialist.addmedia.AddMediaFragment"
+        android:label="AddMediaFragment" >
+        <action
+            android:id="@+id/action_addMediaFragment_to_mainListFragment"
+            app:destination="@id/mainListFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/movieDetailsFragment"
+        android:name="com.example.mymedialist.details.MovieDetailsFragment"
+        android:label="MovieDetailsFragment" >
+        <action
+            android:id="@+id/action_movieDetailsFragment_to_mainListFragment"
+            app:destination="@id/mainListFragment" />
+        <argument
+            android:name="selectedMovieEntity"
+            app:argType="com.example.mymedialist.model.MovieEntity"/>
+    </fragment>
 </navigation>
