--- a/app/src/main/res/layout/fragment_main_list.xml
+++ b/app/src/main/res/layout/fragment_main_list.xml
@@ -28,8 +28,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/media_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="409dp"
+            android:layout_height="654dp"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="16dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -37,7 +37,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_button" />
+            app:layout_constraintTop_toBottomOf="@+id/add_button"
+            app:layout_constraintVertical_bias="0.457" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
