--- a/app/src/main/res/layout/fragment_add_media.xml
+++ b/app/src/main/res/layout/fragment_add_media.xml
@@ -13,30 +13,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <EditText
-            android:id="@+id/title_text_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:ellipsize="none"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="@string/title"
-            android:inputType="textPersonName"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <Button
             android:id="@+id/add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
+            android:onClick="@{() -> addMediaViewModel.onAddButtonClick()}"
             android:text="@string/add_button_text"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_text_input"
-            android:onClick="@{() -> addMediaViewModel.onAddButtonClick()}"/>
+            app:layout_constraintTop_toBottomOf="@+id/autocomplete_title_textview" />
+
+        <AutoCompleteTextView
+            android:id="@+id/autocomplete_title_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:gravity="center"
+            android:hint="@string/title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
