Added Add Item screen and partially implemented its functions

--- a/app/src/main/res/layout/fragment_main_list.xml
+++ b/app/src/main/res/layout/fragment_main_list.xml
@@ -36,7 +36,7 @@
                 android:layout_gravity="end|bottom"
                 android:layout_margin="16dp"
                 android:onClick="@{() -> mainListViewModel.onAddButtonClick()}"
-                android:src="@drawable/ic_add_black_24dp"
+                app:srcCompat="@drawable/ic_add_black_24dp"
                 app:backgroundTint="@android:color/holo_blue_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
