--- a/app/src/main/res/layout/api_movie_item.xml
+++ b/app/src/main/res/layout/api_movie_item.xml
@@ -2,11 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <data>
-        <variable
-            name="movie"
-            type="com.example.mymedialist.model.MovieEntity" />
-    </data>
+<!--    <data>-->
+<!--        <variable-->
+<!--            name="result"-->
+<!--            type="com.example.mymedialist.network.Result" />-->
+<!--    </data>-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -29,9 +29,13 @@
             android:layout_width="64dp"
             android:layout_height="80dp"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+<!--            app:imageUrl="@{result.posterPath}"-->
+<!--            />-->
 
         <TextView
             android:id="@+id/movie_title"
