--- a/app/src/main/res/layout/fragment_add_media.xml
+++ b/app/src/main/res/layout/fragment_add_media.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:onClick="@{() -> addMediaViewModel.onSearchButtonClicked()}"
-            android:text="@string/add_button_text"
+            android:text="@string/search_button_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,11 +39,21 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
+        <ImageView
+            android:id="@+id/status_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_button"
+            app:tmdbApiStatus="@{addMediaViewModel.status}" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/api_movies_list"
             android:layout_width="match_parent"
-            android:layout_height="604dp"
-            android:layout_marginTop="16dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="140dp"
             android:visibility="visible"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
