--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -23,11 +23,13 @@
 
         <TextView
             android:id="@+id/movie_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="225dp"
+            android:layout_height="75dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
             android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/movie_cover"
             app:layout_constraintTop_toTopOf="@+id/movie_cover"
             tools:text="Movie Title" />
@@ -68,12 +70,13 @@
             android:id="@+id/add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginBottom="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="31dp"
+            android:onClick="@{() -> addItemViewModel.addButtonPressed()}"
             android:text="@string/add_button_text"
             app:layout_constraintBottom_toTopOf="@+id/description_text"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.096"
+            app:layout_constraintHorizontal_bias="0.09"
             app:layout_constraintStart_toEndOf="@+id/movie_cover"
             app:layout_constraintTop_toBottomOf="@+id/release_date_text"
             app:layout_constraintVertical_bias="0.0" />
@@ -128,17 +131,18 @@
             android:layout_marginTop="48dp"
             app:layout_constraintStart_toEndOf="@+id/rating_text"
             app:layout_constraintTop_toBottomOf="@+id/set_date_button"
-            tools:text="x / 10" />
+            tools:text=" x / 10" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/set_rating_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="96dp"
             android:layout_marginTop="32dp"
             android:text="@string/set_rating_button_text"
             app:layout_constraintStart_toEndOf="@+id/seen_on_date_text"
-            app:layout_constraintTop_toBottomOf="@+id/set_date_button" />
+            app:layout_constraintTop_toBottomOf="@+id/set_date_button"
+            android:onClick="@{() -> addItemViewModel.numberPickerPressed()}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
