--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -27,9 +27,7 @@
             android:layout_height="75dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
             android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/movie_cover"
             app:layout_constraintTop_toTopOf="@+id/movie_cover"
             tools:text="Movie Title" />
@@ -70,13 +68,12 @@
             android:id="@+id/add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="31dp"
             android:onClick="@{() -> addItemViewModel.addButtonPressed()}"
             android:text="@string/add_button_text"
             app:layout_constraintBottom_toTopOf="@+id/description_text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.09"
             app:layout_constraintStart_toEndOf="@+id/movie_cover"
             app:layout_constraintTop_toBottomOf="@+id/release_date_text"
             app:layout_constraintVertical_bias="0.0" />
