--- a/app/src/main/res/layout/fragment_main_list.xml
+++ b/app/src/main/res/layout/fragment_main_list.xml
@@ -19,31 +19,60 @@
             android:layout_height="match_parent"
             tools:context=".MainActivity">
 
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/app_bar_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/top_app_bar"
+                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
+                    android:layout_width="match_parent"
+                    app:menu="@menu/main_list_menu"
+                    app:subtitleTextColor="@android:color/white"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@android:color/holo_blue_light"
+                    app:title="My Movie List"
+                    app:titleTextColor="#ffff"/>
+
+            </com.google.android.material.appbar.AppBarLayout>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/media_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/app_bar_layout" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/add_floating_button"
+                style="@style/Theme.AppCompat.Light"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
                 android:layout_margin="16dp"
+                android:background="@drawable/ic_add_black_24dp"
                 android:onClick="@{() -> mainListViewModel.onAddButtonClick()}"
-                app:srcCompat="@drawable/ic_add_black_24dp"
+                app:tint="#FFFFFF"
                 app:backgroundTint="@android:color/holo_blue_light"
+                app:backgroundTintMode="src_over"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.954"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.915">
+                app:layout_constraintVertical_bias="0.915"
+                app:rippleColor="@android:color/white"
+                app:srcCompat="@drawable/ic_add_black_24dp">
 
             </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
