--- a/app/src/main/res/layout/fragment_search_media.xml
+++ b/app/src/main/res/layout/fragment_search_media.xml
@@ -33,6 +33,7 @@
             android:ems="10"
             android:hint="@string/title"
             android:inputType="textPersonName"
+            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
