--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -37,7 +37,7 @@
 
             <TextView
                 android:id="@+id/from_info_text"
-                android:layout_width="match_parent"
+                android:layout_width="76dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/from_text_view" />
@@ -59,7 +59,8 @@
             android:text="@string/from_date_button_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/from_linear_layout" />
+            app:layout_constraintTop_toBottomOf="@+id/from_linear_layout"
+            android:onClick="@{() -> statisticsViewModel.onFromDatePressed()}"/>
 
         <LinearLayout
             android:id="@+id/to_linear_layout"
@@ -75,7 +76,7 @@
 
             <TextView
                 android:id="@+id/to_info_text"
-                android:layout_width="match_parent"
+                android:layout_width="45dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/to_text_view" />
@@ -96,7 +97,8 @@
             android:text="@string/to_date_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/to_linear_layout" />
+            app:layout_constraintTop_toBottomOf="@+id/to_linear_layout"
+            android:onClick="@{() -> statisticsViewModel.onToDatePressed()}"/>
 
         <TextView
             android:id="@+id/number_text_info"
@@ -130,7 +132,8 @@
             app:layout_constraintBottom_toTopOf="@+id/number_text_info"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/to_date_button" />
+            app:layout_constraintTop_toBottomOf="@+id/to_date_button"
+            android:onClick="@{() -> statisticsViewModel.onOkButtonPressed()}"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
